--- a/src/main/resources/assets/mindustryinmincraft/lang/en_us.json
+++ b/src/main/resources/assets/mindustryinmincraft/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-  "block.mindustryinmincraft.router": "ROUTER",
+  "block.mindustryinmincraft.router": "Router",
   "itemGroup.tabmindustry": "Mindustry"
 }
