--- a/src/main/resources/assets/mindustryinmincraft/lang/en_us.json
+++ b/src/main/resources/assets/mindustryinmincraft/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "block.mindustryinmincraft.conveyer": "Conveyer",
   "block.mindustryinmincraft.router": "Router",
   "itemGroup.tabmindustry": "Mindustry"
 }
