Added animations for the straight conveyor and added a block for the right converyor
I already have an idea of how to get items to move properly on the straight conveyor, just need to properly implement it

--- a/src/main/resources/assets/mindustryinmincraft/lang/en_us.json
+++ b/src/main/resources/assets/mindustryinmincraft/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "block.mindustryinmincraft.conveyor_right": "Conveyor Right",
   "block.mindustryinmincraft.conveyer": "Conveyer",
   "block.mindustryinmincraft.router": "Router",
   "itemGroup.tabmindustry": "Mindustry"
