--- a/src/main/resources/assets/mindustryinmincraft/lang/en_us.json
+++ b/src/main/resources/assets/mindustryinmincraft/lang/en_us.json
@@ -1,8 +1,14 @@
 {
   "block.mindustryinmincraft.conveyor_right": "Conveyor Right",
   "block.mindustryinmincraft.conveyer": "Conveyer",
-  "block.mindustryinmincraft.router": "Router",
   "itemGroup.tabmindustry": "Mindustry",
   "item.mindustryinmincraft.copper": "Copper",
-  "item.mindustryinmincraft.lead": "Lead"
+  "item.mindustryinmincraft.soundtrack_2": "Soundtrack 2",
+  "item.mindustryinmincraft.lead": "Lead",
+  "item.mindustryinmincraft.soundtrack_1": "Soundtrack 1",
+  "subtitles.soundtrack1": "",
+  "subtitles.soundtrack2": "",
+  "block.mindustryinmincraft.router": "Router",
+  "item.mindustryinmincraft.soundtrack_2.desc": "Second Mindustry Soundtrack",
+  "item.mindustryinmincraft.soundtrack_1.desc": "First Mindustry Soundtrack"
 }
