Added Non-Functional Drill - (Creates blocks around it)

--- a/src/main/resources/assets/mindustryinmincraft/lang/en_us.json
+++ b/src/main/resources/assets/mindustryinmincraft/lang/en_us.json
@@ -3,9 +3,11 @@
   "block.mindustryinmincraft.conveyer": "Conveyer",
   "itemGroup.tabmindustry": "Mindustry",
   "item.mindustryinmincraft.copper": "Copper",
+  "block.mindustryinmincraft.drill": "Drill",
   "item.mindustryinmincraft.soundtrack_2": "Soundtrack 2",
   "item.mindustryinmincraft.lead": "Lead",
   "item.mindustryinmincraft.soundtrack_1": "Soundtrack 1",
+  "block.mindustryinmincraft.drill_11": "Drill 1 1",
   "subtitles.soundtrack1": "",
   "subtitles.soundtrack2": "",
   "block.mindustryinmincraft.router": "Router",
