Framework for adding crafting recipies

--- a/src/main/resources/assets/mindustryinminecraft/lang/en_us.json
+++ b/src/main/resources/assets/mindustryinminecraft/lang/en_us.json
@@ -23,5 +23,6 @@
   "item.mindustryinminecraft.soundtrack_2": "Soundtrack 2",
   "item.mindustryinminecraft.scrap": "Scrap",
   "item.mindustryinminecraft.soundtrack_1": "Soundtrack 1",
-  "block.mindustryinminecraft.stone_titanium_ore": "Stone Titanium Ore"
+  "block.mindustryinminecraft.stone_titanium_ore": "Stone Titanium Ore",
+  "key.mindustryinminecraft.conveyermakerkey": "Conveyermakerkey"
 }
