Added Junction and Fixed Router Texture

--- a/src/main/resources/assets/mindustryinminecraft/lang/en_us.json
+++ b/src/main/resources/assets/mindustryinminecraft/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.mindustryinminecraft.coal": "Coal",
   "item.mindustryinminecraft.soundtrack_1.desc": "First Mindustry Soundtrack",
   "block.mindustryinminecraft.conveyer": "Conveyer",
+  "block.mindustryinminecraft.junction": "Junction",
   "block.mindustryinminecraft.stone_scrap_ore": "Stone Scrap Ore",
   "item.mindustryinminecraft.titanium": "Titanium",
   "subtitles.soundtrack1": "",
